Add api definitions to API Gateway and OAS
